--- a/templates/dashboard/common_navbar.html
+++ b/templates/dashboard/common_navbar.html
@@ -19,7 +19,7 @@
                     <p class="navbar-vertical-label">Pages</p>
                     <hr class="navbar-vertical-line" /><!-- parent pages-->
                     <span class="nav-item-wrapper">
-                        <a class="nav-link label-1" href="pages/starter.html" role="button" data-bs-toggle="" aria-expanded="false">
+                        <a class="nav-link label-1" href="{% url 'dashboard:dashboard' %}" role="button" data-bs-toggle="" aria-expanded="false">
                             <div class="d-flex align-items-center">
                                 <span class="nav-link-icon">
                                     <span data-feather="compass"></span>
@@ -29,9 +29,10 @@
                                 </span>
                             </div>
                         </a>
-                    </span><!-- parent pages-->
+                    </span>
+                    <!-- parent pages-->
                     <span class="nav-item-wrapper">
-                        <a class="nav-link label-1" href="pages/pages/faq.html" role="button" data-bs-toggle="" aria-expanded="false">
+                        <a class="nav-link label-1" href="{% url 'dashboard:create-analysis' %}" role="button" data-bs-toggle="" aria-expanded="false">
                             <div class="d-flex align-items-center">
                                 <span class="nav-link-icon">
                                     <span data-feather="help-circle"></span>
@@ -42,38 +43,21 @@
                             </div>
                         </a>
                     </span>
-                    <!-- parent pages-->
+
                     <span class="nav-item-wrapper">
-                        <a class="nav-link dropdown-indicator label-1" href="#pricing" role="button" data-bs-toggle="collapse" aria-expanded="false" aria-controls="pricing">
+                        <a class="nav-link label-1" href="{% url 'dashboard:trades_list' %}" role="button" data-bs-toggle="" aria-expanded="false">
                             <div class="d-flex align-items-center">
-                                <div class="dropdown-indicator-icon">
-                                    <span class="fas fa-caret-right"></span>
-                                </div>
                                 <span class="nav-link-icon">
-                                    <span data-feather="tag"></span>
+                                    <span data-feather="layers"></span>
                                 </span>
-                                <span class="nav-link-text">Pricing</span>
+                                <span class="nav-link-text-wrapper">
+                                    <span class="nav-link-text">Trades</span>
+                                </span>
                             </div>
                         </a>
-                        <div class="parent-wrapper label-1">
-                            <ul class="nav collapse parent" data-bs-parent="#navbarVerticalCollapse" id="pricing">
-                                <p class="collapsed-nav-item-title d-none">Pricing</p>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pages/pages/pricing/pricing-column.html" data-bs-toggle="" aria-expanded="false">
-                                        <div class="d-flex align-items-center">
-                                            <span class="nav-link-text">Pricing column</span>
-                                        </div>
-                                    </a><!-- more inner pages-->
-                                </li>
-                                <li class="nav-item"><a class="nav-link" href="pages/pages/pricing/pricing-grid.html" data-bs-toggle="" aria-expanded="false">
-                                    <div class="d-flex align-items-center">
-                                        <span class="nav-link-text">Pricing grid</span>
-                                    </div>
-                                </a><!-- more inner pages-->
-                            </li>
-                        </ul>
-                    </div>
-                </span>
+                    </span>
+                    <!-- parent pages-->
+                    
             </li>
         </ul>
     </div>
@@ -585,8 +569,15 @@
                                             data-feather="user-plus"></span>Add another account</a></li>
                             </ul>
                             <hr />
-                            <div class="px-3"> <a class="btn btn-phoenix-secondary d-flex flex-center w-100" href="#!">
-                                    <span class="me-2" data-feather="log-out"> </span>Sign out</a></div>
+                            <div class="px-3"> 
+                                <span class=" d-flex flex-center w-100">
+                                    <span class="me-2" data-feather="log-out"></span>
+                                    <form action="{% url 'accounts:account_logout' %}" method="POST">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-phoenix-secondary">Sign out</button> 
+                                    </form>
+                                </span>
+                                </div>
                             <div class="my-2 text-center fw-bold fs--2 text-600"><a class="text-600 me-1"
                                     href="#!">Privacy
                                     policy</a>&bull;<a class="text-600 mx-1" href="#!">Terms</a>&bull;<a
@@ -962,8 +953,15 @@
                                             data-feather="user-plus"></span>Add another account</a></li>
                             </ul>
                             <hr />
-                            <div class="px-3"> <a class="btn btn-phoenix-secondary d-flex flex-center w-100" href="#!">
-                                    <span class="me-2" data-feather="log-out"> </span>Sign out</a></div>
+                            <div class="px-3">
+                                <span class="btn btn-phoenix-secondary d-flex flex-center w-100">
+                                    <span class="me-2" data-feather="log-out"></span>
+                                    <form action="{% url 'accounts:account_logout' %}" method="POST">
+                                        {% csrf_token %}
+                                        <button type="submit">Sign out</button> 
+                                    </form>
+                                </span>
+                            </div>
                             <div class="my-2 text-center fw-bold fs--2 text-600"><a class="text-600 me-1"
                                     href="#!">Privacy
                                     policy</a>&bull;<a class="text-600 mx-1" href="#!">Terms</a>&bull;<a
@@ -1098,7 +1096,7 @@
                                             href="pages/pages/notifications.html">Notifications</a><a
                                             class="nav-link fw-semi-bold" href="pages/pages/members.html">Members</a>
                                         <p class="nav-link mb-0 fw-bold">Split</p><a class="nav-link fw-semi-bold"
-                                            href="pages/authentication/split/sign-in.html">Sign in</a><a
+                                            href="{% url 'accounts:account_login' %}">Sign in</a><a
                                             class="nav-link fw-semi-bold"
                                             href="pages/authentication/split/sign-up.html">Sign up</a><a
                                             class="nav-link fw-semi-bold"
@@ -1116,7 +1114,7 @@
                                             href="pages/errors/404.html">404</a><a class="nav-link fw-semi-bold"
                                             href="pages/errors/500.html">500</a>
                                         <p class="nav-link mb-0 fw-bold">Simple</p><a class="nav-link fw-semi-bold"
-                                            href="pages/authentication/simple/sign-in.html">Sign in</a><a
+                                            href="{% url 'accounts:account_login' %}">Sign in</a><a
                                             class="nav-link fw-semi-bold"
                                             href="pages/authentication/simple/sign-up.html">Sign up</a><a
                                             class="nav-link fw-semi-bold"
@@ -1679,7 +1677,7 @@
                                             href="pages/pages/notifications.html">Notifications</a><a
                                             class="nav-link fw-semi-bold" href="pages/pages/members.html">Members</a>
                                         <p class="nav-link mb-0 fw-bold">Split</p><a class="nav-link fw-semi-bold"
-                                            href="pages/authentication/split/sign-in.html">Sign in</a><a
+                                            href="{% url 'accounts:account_login' %}">Sign in</a><a
                                             class="nav-link fw-semi-bold"
                                             href="pages/authentication/split/sign-up.html">Sign up</a><a
                                             class="nav-link fw-semi-bold"
@@ -1697,7 +1695,7 @@
                                             href="pages/errors/404.html">404</a><a class="nav-link fw-semi-bold"
                                             href="pages/errors/500.html">500</a>
                                         <p class="nav-link mb-0 fw-bold">Simple</p><a class="nav-link fw-semi-bold"
-                                            href="pages/authentication/simple/sign-in.html">Sign in</a><a
+                                            href="{% url 'accounts:account_login' %}">Sign in</a><a
                                             class="nav-link fw-semi-bold"
                                             href="pages/authentication/simple/sign-up.html">Sign up</a><a
                                             class="nav-link fw-semi-bold"
