--- a/templates/dashboard/common_navbar.html
+++ b/templates/dashboard/common_navbar.html
@@ -80,7 +80,7 @@
                 data-bs-toggle="collapse" data-bs-target="#navbarVerticalCollapse"
                 aria-controls="navbarVerticalCollapse" aria-expanded="false" aria-label="Toggle Navigation"><span
                     class="navbar-toggle-icon"><span class="toggle-line"></span></span></button>
-            <a class="navbar-brand me-1 me-sm-3" href="index-2.html">
+            <a class="navbar-brand me-1 me-sm-3" href="{% url 'landingpage:homepage' %}">
                 <div class="d-flex align-items-center">
                     <div class="d-flex align-items-center"><img src="{% static 'assets/img/icons/logo-second.png' %}"
                             alt="phoenix" width="27" />
