--- a/templates/landingpage/landing.html
+++ b/templates/landingpage/landing.html
@@ -90,7 +90,7 @@
     <!-- Trading iew chart end-->
 
     <nav class="navbar bg-white navbar-expand-lg sticky-top">
-      <div class="container-small px-0 px-sm-3"><a class="navbar-brand flex-1 flex-lg-grow-0" href="index-2.html">
+      <div class="container-small px-0 px-sm-3"><a class="navbar-brand flex-1 flex-lg-grow-0" href="{% url 'landingpage:homepage' %}">
           <div class="d-flex align-items-center"><img src="{% static 'assets/img/icons/logo-second.png' %}"
               alt="phoenix" width="27" />
             <p class="logo-text ms-2">TradeLaa</p>
@@ -180,14 +180,14 @@
                     class="pt-7 pt-md-0 w-100 shadow-lg d-dark-none rounded-2"
                     src="{% static 'assets/img/bg/bg-28.png' %}" alt="hero-header" /><img
                     class="pt-7 pt-md-0 w-100 shadow-lg d-light-none rounded-2"
-                    src="{% static 'assets/img/bg/bg-29.png' %}" alt="hero-header" /></div>
+                    src="{% static 'assets/img/bg/Capture.png' %}" alt="hero-header" /></div>
               </div>
             </div>
           </div>
           <div class="col-12 col-lg-6 text-lg-start text-center pt-8 pb-6 order-0">
             <h1 class="fs-5 fs-lg-6 fs-md-7 fs-lg-6 fs-xl-7 fs fw-black mb-4"><span
-                class="text-primary me-3">Elegance</span>for<br />your web app</h1>
-            <p class="mb-5">Standard, modern and Elegant solution for your next web app so you don’t have to look
+                class="text-primary me-3">TradeLaa</span>for<br />your Financial Needs</h1>
+            <p class="mb-5">Standard, modern and Elegant Trading Analysis Platform for your next Trading Journey so you don’t have to look
               further. Sign up or check the demo below.</p><a class="btn btn-lg btn-primary rounded-pill me-3" href="#!"
               role="button">Sign up</a><a class="btn btn-link me-2 fs-0 p-0 text-decoration-none" href="#!"
               role="button">Check Demo<span class="fa-solid fa-angle-right ms-2 fs--1"></span></a>
@@ -263,10 +263,9 @@
           <div class="row">
             <div class="col-lg-6 text-center text-lg-start pe-xxl-3">
               <h4 class="text-primary fw-bolder mb-4">Features</h4>
-              <h2 class="mb-3 text-black lh-base">A fully integrated suite<br />of payments products</h2>
-              <p class="mb-5">With the power of Phoenix, you can now focus only on functionaries for your digital
-                products, while leaving the UI design on us!With the power of Phoenix, you can now focus only on
-                functionaries for your digital products, while leaving the UI design on us!</p><a
+              <h2 class="mb-3 text-black lh-base">A fully integrated suite<br />For Trading</h2>
+              <p class="mb-5">With the power of TradeLaa, you can now focus only on Trading Profits for your digital
+                assets, while leaving the Analysis on us!</p><a
                 class="btn btn-lg btn-outline-primary rounded-pill me-2" href="#!" role="button">Find out more<i
                   class="fa-solid fa-angle-right ms-2"></i></a>
             </div>
@@ -277,7 +276,7 @@
                   <div>
                     <h5 class="fw-bolder mb-2">Lightning Speed</h5>
                     <p class="fw-semi-bold lh-sm">Present everything you need in one place within minutes! Grow with
-                      Phoenix!</p>
+                      TradeLaa!</p>
                   </div>
                   <div><a class="btn btn-link me-2 p-0 fs--1" href="#!" role="button">Check Demo<span
                         class="fa-solid fa-angle-right ms-2"></span></a></div>
@@ -290,7 +289,7 @@
                     src="{% static 'assets/img/icons/illustrations/pie.png' %}" width="48" height="48" alt="" />
                   <div>
                     <h5 class="fw-bolder mb-2">All-in-one solution</h5>
-                    <p class="fw-semi-bold lh-sm">Show your production and growth graph in one place with Phoenix!</p>
+                    <p class="fw-semi-bold lh-sm">Show your Profit and growth graph in one place with TradeLaa Platform!</p>
                   </div>
                   <div><a class="btn btn-link me-2 p-0 fs--1" href="#!" role="button">Check Demo<i
                         class="fa-solid fa-angle-right ms-2"></i></a></div>
@@ -306,7 +305,7 @@
             <div class="col-lg-6">
               <h6 class="text-primary mb-2 ls-2">SIGNAL</h6>
               <h3 class="fw-bolder mb-3">Recieve the signals instantly</h3>
-              <p class="mb-5 px-md-7 px-lg-0">Phoenix makes it possible for you to quickly and effectively receive every
+              <p class="mb-5 px-md-7 px-lg-0">TradeLaa makes it possible for you to quickly and effectively receive every
                 signal. No need for drawn-out waiting.</p><a class="btn btn-link me-2 p-0 fs--1" href="#!"
                 role="button">Check Demo<i class="fa-solid fa-angle-right ms-2"></i></a>
             </div>
@@ -319,7 +318,7 @@
             <div class="col-lg-6">
               <h6 class="text-primary mb-2 ls-2">SIGNAL</h6>
               <h3 class="fw-bolder mb-3">See Your Revenue Grow</h3>
-              <p class="mb-5 px-md-7 px-lg-0">Grow with Phoenix. We help you with everything you might need., We make it
+              <p class="mb-5 px-md-7 px-lg-0">Grow with TradeLaa. We help you with everything you might need., We make it
                 easy and keep it simple.</p><a class="btn btn-link me-2 p-0 fs--1" href="#!" role="button">Check Demo<i
                   class="fa-solid fa-angle-right ms-2"></i></a>
             </div>
@@ -332,7 +331,7 @@
             <div class="col-lg-6 text-center text-lg-start">
               <h6 class="text-primary mb-2 ls-2">SIGNAL</h6>
               <h3 class="fw-bolder mb-3">Get Reports Ready</h3>
-              <p class="mb-5 px-md-7 px-lg-0">With Phoenix, you can get ready reports on your growth analysis anytime.
+              <p class="mb-5 px-md-7 px-lg-0">With TradeLaa, you can get ready reports on your growth analysis anytime.
                 This dashboard also has all filters accessible according to your needs.</p><a
                 class="btn btn-link me-2 p-0 fs--1" href="#!" role="button">Check Demo<i
                   class="fa-solid fa-angle-right ms-2"></i></a>
@@ -521,7 +520,7 @@
         style="background-image:url({% static 'assets/img/bg/bg-right-6.png' %});background-position:right;background-size:auto;">
       </div>
       <!--/.bg-holder-->
-      <div class="container-small position-relative">
+      <!-- <div class="container-small position-relative">
         <div class="row mb-8 text-center text-sm-start">
           <div class="col-12 mb-4">
             <h4 class="text-primary fw-bolder mb-3">Gallery</h4>
@@ -576,7 +575,7 @@
               data-bigpicture='{"gallery":"#image_gallery"}' data-bp="assets/img/10.html"><img
                 class="rounded img-fluid w-100" src="{% static 'assets/img/gallery/10.png' %}" alt="" /></a></div>
         </div>
-      </div>
+      </div> -->
     </section>
     <section class="bg-white">
       <div class="bg-holder d-none d-md-block"
