--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -9,134 +9,131 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Sign In</title>
+  <title>Sign Up</title>
   {% include 'dashboard/common_css.html' %}
   {% block common_css %}
   {% endblock %}
+
+  <style>
+    .errorlist{
+      list-style: none;
+      margin: 0 0 20px 0;
+      padding: 0;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="main_container">
-    <form action="{% url 'accounts:account_login' %}" method="POST">
-      {% csrf_token %}
-      <main class="main" id="top">
-        <div class="container-fluid px-0" data-layout="container">
-          <div class="container">
-            <div class="row flex-center min-vh-100 py-5">
-              <div class="col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-3">
-                <a class="d-flex flex-center text-decoration-none mb-4" href="../../../index-2.html">
-                  <div class="d-flex align-items-center fw-bolder fs-5 d-inline-block">
-                    <img src="{% static 'assets/img/icons/logo-second.png' %}" alt="phoenix" width="58" />
-                  </div>
-                </a>
-                <div class="text-center mb-7">
-                  <h3 class="text-1000">Sign In</h3>
-                  <p class="text-700">Get access to your account</p>
-                </div>
-                <button class="btn btn-phoenix-secondary w-100 mb-3">
-                  <span class="fab fa-google text-danger me-2 fs--1"></span>Sign in with google
-                </button>
-                <button class="btn btn-phoenix-secondary w-100">
-                  <span class="fab fa-facebook text-primary me-2 fs--1"></span>Sign in with facebook
-                </button>
-                <div class="position-relative">
-                  <hr class="bg-200 mt-5 mb-4" />
-                  <div class="divider-content-center">or use email</div>
-                </div>
-                <div class="mb-3 text-start">
-                  <label class="form-label" for="email">Email</label>
-                  <div class="form-icon-container">
-                    <input class="form-control form-icon-input" id="email" type="email" placeholder="Email Address" name="email" />
-                    <span class="fas fa-user text-900 fs--1 form-icon"></span>
-                  </div>
-                </div>
-                <div class="mb-3 text-start">
-                  <label class="form-label" for="password">Password</label>
-                  <div class="form-icon-container">
-                    <input class="form-control form-icon-input" type="password" placeholder="Password"
-                      name="password" />
-                    <span class="fas fa-key text-900 fs--1 form-icon"></span>
-                  </div>
-                </div>
-                <div class="row flex-between-center mb-7">
-                  <div class="col-auto">
-                    <div class="form-check mb-0">
-                      <input name="remember" class="form-check-input" id="basic-checkbox" type="checkbox"
-                        checked="checked" />
-                      <label class="form-check-label mb-0" for="basic-checkbox">Remember me</label>
-                    </div>
-                  </div>
-                  <div class="col-auto">
-                    <a class="fs--1 fw-semi-bold" href="forgot-password.html">Forgot Password?</a>
-                  </div>
-                </div>
-                <button class="btn btn-primary w-100 mb-3" type="submit">Sign In</button>
-                <div class="text-center">
-                  <a class="fs--1 fw-bold" href="{% url 'accounts:account_signup' %}">Create an account</a>
-                </div>
+  <!-- ===============================================-->
+  <!--    Main Content-->
+  <!-- ===============================================-->
+  <div>
+
+  </div>
+  <form action="{% url 'accounts:account_signup' %}" method="POST">
+    {% csrf_token %}
+    <main class="main" id="top">
+      <div class="container-fluid px-0" data-layout="container">
+        <div class="container">
+          <div class="row flex-center min-vh-100 py-5">
+            <div class="col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-3"><a
+                class="d-flex flex-center text-decoration-none mb-4" href="../../../index-2.html">
+                <div class="d-flex align-items-center fw-bolder fs-5 d-inline-block"><img
+                    src="{% static 'assets/img/icons/logo-second.png' %}" alt="phoenix" width="58" /></div>
+              </a>
+              <div class="text-center mb-7">
+                <h3 class="text-1000">Sign Up</h3>
+                <p class="text-700">Get access to your account</p>
+              </div><button class="btn btn-phoenix-secondary w-100 mb-3"><span
+                  class="fab fa-google text-danger me-2 fs--1"></span>Sign in with google</button><button
+                class="btn btn-phoenix-secondary w-100"><span
+                  class="fab fa-facebook text-primary me-2 fs--1"></span>Sign
+                in with facebook</button>
+              <div class="position-relative">
+                <hr class="bg-200 mt-5 mb-4" />
+                <div class="divider-content-center">or use email</div>
               </div>
+              
+              <div>
+                {% for f in form %}
+                <div class="mb-3 text-start">
+                  <div>{{f.label}}</div>
+                  <div class="form-icon-container">{{f}}</div>
+                </div>
+                 <div style="color:red; list-style: none;">
+                  {{f.errors}}
+                </div>
+                {% endfor %}
+              </div>
+              
+              <button class="btn btn-primary w-100 mb-3" type="submit">Sign Up</button>
+
+              <div class="text-center"><a class="fs--1 fw-bold" href="{% url 'accounts:account_login' %}">Already have a account? Login here</a></div>
+              
             </div>
           </div>
         </div>
-        <script>
-          var navbarTopShape = localStorage.getItem('phoenixNavbarTopShape');
-          var navbarPosition = localStorage.getItem('phoenixNavbarPosition');
-          var body = document.querySelector('body');
-          var navbarDefault = document.querySelector('#navbarDefault');
-          var navbarTopNew = document.querySelector('#navbarTopNew');
-          var navbarSlim = document.querySelector('#navbarSlim');
-          var navbarTopSlimNew = document.querySelector('#navbarTopSlimNew');
+      </div>
+      
+      <script>
+        var navbarTopShape = localStorage.getItem('phoenixNavbarTopShape');
+        var navbarPosition = localStorage.getItem('phoenixNavbarPosition');
+        var body = document.querySelector('body');
+        var navbarDefault = document.querySelector('#navbarDefault');
+        var navbarTopNew = document.querySelector('#navbarTopNew');
+        var navbarSlim = document.querySelector('#navbarSlim');
+        var navbarTopSlimNew = document.querySelector('#navbarTopSlimNew');
 
-          var documentElement = document.documentElement;
-          var navbarVertical = document.querySelector('.navbar-vertical');
+        var documentElement = document.documentElement;
+        var navbarVertical = document.querySelector('.navbar-vertical');
 
-          if (navbarTopShape === 'slim' && navbarPosition === 'vertical') {
-            navbarDefault.remove();
-            navbarTopNew.remove();
-            navbarTopSlimNew.remove();
-            navbarSlim.style.display = 'block';
-            navbarVertical.style.display = 'inline-block';
-            body.classList.add('nav-slim');
-          } else if (navbarTopShape === 'slim' && navbarPosition === 'horizontal') {
-            navbarDefault.remove();
-            navbarVertical.remove();
-            navbarTopNew.remove();
-            navbarSlim.remove();
-            navbarTopSlimNew.removeAttribute('style');
-            body.classList.add('nav-slim');
-          } else if (navbarTopShape === 'default' && navbarPosition === 'horizontal') {
-            navbarDefault.remove();
-            navbarSlim.remove();
-            navbarVertical.remove();
-            navbarTopSlimNew.remove();
-            navbarTopNew.removeAttribute('style');
-            documentElement.classList.add('navbar-horizontal')
+        if (navbarTopShape === 'slim' && navbarPosition === 'vertical') {
+          navbarDefault.remove();
+          navbarTopNew.remove();
+          navbarTopSlimNew.remove();
+          navbarSlim.style.display = 'block';
+          navbarVertical.style.display = 'inline-block';
+          body.classList.add('nav-slim');
+        } else if (navbarTopShape === 'slim' && navbarPosition === 'horizontal') {
+          navbarDefault.remove();
+          navbarVertical.remove();
+          navbarTopNew.remove();
+          navbarSlim.remove();
+          navbarTopSlimNew.removeAttribute('style');
+          body.classList.add('nav-slim');
+        } else if (navbarTopShape === 'default' && navbarPosition === 'horizontal') {
+          navbarDefault.remove();
+          navbarSlim.remove();
+          navbarVertical.remove();
+          navbarTopSlimNew.remove();
+          navbarTopNew.removeAttribute('style');
+          documentElement.classList.add('navbar-horizontal')
 
-          } else {
-            body.classList.remove('nav-slim');
-            navbarSlim.remove();
-            navbarTopNew.remove();
-            navbarTopSlimNew.remove();
-            navbarDefault.removeAttribute('style');
-            navbarVertical.removeAttribute('style');
-          }
+        } else {
+          body.classList.remove('nav-slim');
+          navbarSlim.remove();
+          navbarTopNew.remove();
+          navbarTopSlimNew.remove();
+          navbarDefault.removeAttribute('style');
+          navbarVertical.removeAttribute('style');
+        }
 
-          var navbarTopStyle = localStorage.getItem('phoenixNavbarTopStyle');
-          var navbarTop = document.querySelector('.navbar-top');
-          if (navbarTopStyle === 'darker') {
-            navbarTop.classList.add('navbar-darker');
-          }
+        var navbarTopStyle = localStorage.getItem('phoenixNavbarTopStyle');
+        var navbarTop = document.querySelector('.navbar-top');
+        if (navbarTopStyle === 'darker') {
+          navbarTop.classList.add('navbar-darker');
+        }
 
-          var navbarVerticalStyle = localStorage.getItem('phoenixNavbarVerticalStyle');
-          var navbarVertical = document.querySelector('.navbar-vertical');
-          if (navbarVerticalStyle === 'darker') {
-            navbarVertical.classList.add('navbar-darker');
-          }
-        </script>
-      </main>
-    </form>
-  </div>
-
+        var navbarVerticalStyle = localStorage.getItem('phoenixNavbarVerticalStyle');
+        var navbarVertical = document.querySelector('.navbar-vertical');
+        if (navbarVerticalStyle === 'darker') {
+          navbarVertical.classList.add('navbar-darker');
+        }
+      </script>
+    </main>
+  </form><!-- ===============================================-->
+  <!--    End of Main Content-->
+  <!-- ===============================================-->
 
   <div class="offcanvas offcanvas-end settings-panel border-0" id="settings-offcanvas" tabindex="-1"
     aria-labelledby="settings-offcanvas">
@@ -278,8 +275,5 @@
   <script src="{% static 'vendors/dayjs/dayjs.min.js' %}"></script>
   <script src="{% static 'assets/js/phoenix.js' %}"></script>
 </body>
-
-
-<!-- Mirrored from prium.github.io/phoenix/v1.6.0/pages/authentication/simple/sign-in.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 17 Dec 2022 18:17:23 GMT -->
 
 </html>
