--- a/templates/dashboard/create_analysis.html
+++ b/templates/dashboard/create_analysis.html
@@ -72,6 +72,7 @@
                             <div class="col-sm-6 col-md-8 ticker-box-wrapper-main">
                                 <div class="form-floating">
                                     <input name="ticker_name" class="form-control" id="get_ticker_name" type="text" placeholder="Project title" />
+                                    <input type="hidden" value="" name="symbol" id="stock_symbol">
                                     <label for="floatingInputGrid">Search Stocks, Options</label>
                                 </div>
                                 <div class="tickers-box mt-1" id="tickers-box-wrapper">
