--- a/templates/dashboard/create_analysis.html
+++ b/templates/dashboard/create_analysis.html
@@ -81,10 +81,18 @@
                                     </ul>
                                 </div>
                             </div>
+                            
+                            <div class="col-sm-6 col-md-4">
+                                <div class="form-floating">
+                                    <input name="market_price" class="form-control" id="floatingInputGrid" type="text" placeholder="Project title" />
+                                    <label for="floatingInputGrid">Market Price</label>
+                                </div>
+                            </div>
+
                             <div class="col-sm-6 col-md-4">
                                 <div class="form-floating">
                                     <input name="entry_price" class="form-control" id="floatingInputGrid" type="text" placeholder="Project title" />
-                                    <label for="floatingInputGrid">Entery Price</label>
+                                    <label for="floatingInputGrid">Entry Price</label>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4">
